--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <title>DevChall</title>
 </head>
 <body>
-<main layout:fragment="main" class="flex flex-col w-full min-h-screen">
+<main layout:fragment="main" class="flex flex-col w-full min-h-screen bg-[#121212] text-white">
     <!--  네브바 시작  -->
     <nav>
         <div class="navbar text-accent bg-[#121212]">
