Fix: Apply Grid to  main page Challenge list
show 5 Challenge in one line

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,8 +88,8 @@
                 <h1 class="text-black text-2xl font-bold">>나의 챌린지</h1>
             </div>
 
-            <div class="flex flex-wrap mx-10">
-                <div class="card flex-shrink-0 w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
+            <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-5 gap-[20px]">
+                <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                     <figure class="pt-5">
                         <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
                     </figure>
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card flex-shrink-0 w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
+                <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                     <figure class="pt-5">
                         <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
                     </figure>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card flex-shrink-0 w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
+                <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                     <figure class="pt-5">
                         <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
                     </figure>
@@ -174,9 +174,9 @@
                 <h1 class="text-black text-2xl font-bold">>모집 중인 챌린지</h1>
             </div>
 
-            <div class="flex flex-wrap mx-10">
+            <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-5 gap-[20px]">
                 <div>
-                    <div class="card flex-shrink-0 w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
+                    <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
                         <figure class="pt-5">
                             <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
                         </figure>
