--- a/src/main/resources/templates/usr/member/me.html
+++ b/src/main/resources/templates/usr/member/me.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>내 정보</title>
 </head>
+
 <body>
 
+
+<div>번호 : <span th:text="${@rq.member.id}"></span></div>
+<div>아이디 : <span th:text="${@rq.member.loginID}"></span></div>
+<div>이름 : <span th:text="${@rq.member.username}"></span></div>
+<div>닉네임 : <span th:text="${@rq.member.nickname}"></span></div>
+<div>이메일 : <span th:text="${@rq.member.email}"></span></div>
+<div>가입날짜 : <span th:text="${#temporals.format(@rq.member.createDate, 'yyyy-MM-dd HH:mm')}"></span></div>
+<div>수정날짜 : <span th:text="${#temporals.format(@rq.member.modifyDate, 'yyyy-MM-dd HH:mm')}"></span></div>
+
+
+
 </body>
+
 </html>
