Feat: MemberDto 도입

--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -7,43 +7,43 @@
 <body>
 
 <main layout:fragment="main" body class="bg-[#121212] text-white flex flex-col w-full">
-    <script>
-        function LoginForm__submit(form) {
-            // loginID 이(가) 올바른지 체크
+<!--    <script>-->
+<!--        function LoginForm__submit(form) {-->
+<!--            // loginID 이(가) 올바른지 체크-->
 
-            form.loginID.value = form.loginID.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
+<!--            form.loginID.value = form.loginID.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거-->
 
-            if (form.loginID.value.length == 0) {
-                toastWarning('아이디를 입력해주세요.');
-                form.loginID.focus();
-                return;
-            }
+<!--            if (form.loginID.value.length == 0) {-->
+<!--                toastWarning('아이디를 입력해주세요.');-->
+<!--                form.loginID.focus();-->
+<!--                return;-->
+<!--            }-->
 
-            if (form.loginID.value.length < 4) {
-                toastWarning('아이디를 4자 이상 입력해주세요.');
-                form.loginID.focus();
-                return;
-            }
+<!--            if (form.loginID.value.length < 4) {-->
+<!--                toastWarning('아이디를 4자 이상 입력해주세요.');-->
+<!--                form.loginID.focus();-->
+<!--                return;-->
+<!--            }-->
 
-            // password 이(가) 올바른지 체크
+<!--            // password 이(가) 올바른지 체크-->
 
-            form.password.value = form.password.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
+<!--            form.password.value = form.password.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거-->
 
-            if (form.password.value.length == 0) {
-                form.password.focus();
-                toastWarning('비밀번호를 입력해주세요.');
-                return;
-            }
+<!--            if (form.password.value.length == 0) {-->
+<!--                form.password.focus();-->
+<!--                toastWarning('비밀번호를 입력해주세요.');-->
+<!--                return;-->
+<!--            }-->
 
-            if (form.password.value.length < 4) {
-                toastWarning('비밀번호를 4자 이상 입력해주세요.');
-                form.password.focus();
-                return;
-            }
+<!--            if (form.password.value.length < 4) {-->
+<!--                toastWarning('비밀번호를 4자 이상 입력해주세요.');-->
+<!--                form.password.focus();-->
+<!--                return;-->
+<!--            }-->
 
-            form.submit(); // 폼 발송
-        }
-    </script>
+<!--            form.submit(); // 폼 발송-->
+<!--        }-->
+<!--    </script>-->
     <div>
         <img src="/images/logo.png" class="w-[250px] h-[250px]">
     </div>
