Feat: modifypost.html front 인증글 수정하기 프론트 작업 완료

--- a/src/main/resources/templates/usr/challenge/write_form.html
+++ b/src/main/resources/templates/usr/challenge/write_form.html
@@ -22,7 +22,7 @@
                             <div>
                                 <div class="w-full">
                                     <label for="title" class="label">
-                                        <span class="text-gray-400">인증 내용</span>
+                                        <span class="text-gray-400">인증 제목</span>
                                     </label>
                                     <input type="text" name="title" maxlength="30" placeholder="인증 제목" id="title"
                                            class="w-300% input input-bordered form-control text-black" autofocus/>
