--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,9 +26,15 @@
 
             </div>
             <div class="navbar-end" >
+                <div>
+                    <div th:if="${@rq.login}" class="badge badge-primary" th:text="${@rq.member.nickname}"></div>
+                </div>
                 <a href="usr/challenge/create" class="btn btn-sm btn-primary mx-2">챌린지 생성</a>
                 <a href="usr/member/join" class="btn btn-sm btn-outline btn-accent mx-2">회원가입</a>
                 <a href="usr/member/login" class="btn btn-sm bg-accent mx-2">로그인</a>
+                <form th:action="|/usr/member/logout|" method="post" class="m-0">
+                    <button type="submit" class="btn btn-sm bg-accent mx-2"> 로그아웃</button>
+                </form>
             </div>
         </div>
     </nav>
@@ -82,69 +88,33 @@
     <!--  헤더 끝  -->
 
     <section class="bg-[#F2F4F4] " style="border-top-left-radius: 4rem;">
-        <!--    나의 챌린지 타임리프 작업 필요   -->
-        <article class="p-5 mx-5">
+
+        <!--    나의 챌린지  -->
+        <article th:if="${@rq.login}" class="p-5 mx-5">
+
             <div class="p-2">
                 <h1 class="text-black text-2xl font-bold">>나의 챌린지</h1>
             </div>
+            <div class="text-black p-2" th:if="${challengeMembers==null or #lists.isEmpty(challengeMembers)}">
+                <i class="fa-regular fa-face-laugh"></i> 참가 중인 챌린지가 없어요. 다양한 챌린지를 경험해보세요!
+            </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-5 gap-[20px]">
-                <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
-                    <figure class="pt-5">
-                        <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
-                    </figure>
+            <div th:unless="${challengeMembers==null or #lists.isEmpty(challengeMembers)}"
+                    class="grid grid-cols-1 md:grid-cols-3 xl:grid-cols-5 gap-[20px]">
+                <div th:each="challengeMember:${challengeMembers}"
+                        class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
+                    <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
+                        <figure class="pt-5">
+                            <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
+                        </figure>
+                    </a>
                     <div class="card-body items-center text-center" style="padding: 10px">
-                        <h4 class="text-black font-bold text-sm">프로그래머스 코테 준비</h4>
-                        <div class="flex flex-wrap">
-                            <span class="badge badge-primary mx-1" style="font-size: x-small">매일</span>
-                            <span class="badge badge-secondary mx-1" style="font-size: x-small">코딩테스트</span>
-                        </div>
-                        <progress class="progress progress-accent w-56" value="40" max="100"></progress>
-                        <div class="card-actions flex justify-around">
-                            <div style="font-size: x-small">
-                                <a href="">
-                                    <span>댓글</span> <span>5</span>
-                                </a>
-                            </div>
-                            <div style="font-size: x-small">
-                                <a href="">
-                                    <span>클립</span><span>3</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
-                    <figure class="pt-5">
-                        <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
-                    </figure>
-                    <div class="card-body items-center text-center" style="padding: 10px">
-                        <h4 class="text-black font-bold text-sm">프로그래머스 코테 준비</h4>
-                        <div class="flex flex-wrap">
-                            <span class="badge badge-primary mx-1" style="font-size: x-small">매일</span>
-                            <span class="badge badge-secondary mx-1" style="font-size: x-small">코딩테스트</span>
-                        </div>
-                        <progress class="progress progress-accent w-56" value="40" max="100"></progress>
-                        <div class="card-actions flex justify-around">
-                            <div style="font-size: x-small">
-                                <a href="">
-                                    <span>댓글</span> <span>5</span>
-                                </a>
-                            </div>
-                            <div style="font-size: x-small">
-                                <a href="">
-                                    <span>클립</span><span>3</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
-                    <figure class="pt-5">
-                        <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
-                    </figure>
-                    <div class="card-body items-center text-center" style="padding: 10px">
-                        <h4 class="text-black font-bold text-sm">프로그래머스 코테 준비</h4>
+                        <a th:href="|/usr/challenge/detail/${challengeMember.linkedChallenge.id}|">
+                            <h4 class="text-black font-bold text-sm"
+                                th:text="${challengeMember.linkedChallenge.challengeName}">
+                                프로그래머스 코테 준비
+                            </h4>
+                        </a>
                         <div class="flex flex-wrap">
                             <span class="badge badge-primary mx-1" style="font-size: x-small">매일</span>
                             <span class="badge badge-secondary mx-1" style="font-size: x-small">코딩테스트</span>
@@ -171,7 +141,7 @@
         <!--    챌린지 리스트 시작   -->
         <article class="p-5 mx-5">
             <div class="text-center mt-10 text-black" th:if="${challenges == null or #lists.isEmpty(challenges)}" >
-                <i class="fa-regular fa-face-laugh"></i> 아직 시작된 챌린지가 없어요. 새로운 챌린지를 생성해보세요!
+                <i class="fa-regular fa-face-laugh"></i> 모집중인 챌린지가 없어요. 새로운 챌린지를 생성해보세요!
             </div>
             <div th:unless="${challenges == null or #lists.isEmpty(challenges)}">
                 <div class="p-2">
@@ -182,12 +152,13 @@
                     <div th:each="challenge:${challenges}">
                         <div class="text-black">
                             <div class="card w-[200px] h-auto bg-base-100 shadow-xl text-gray-400 my-2 mx-5">
-                                <figure class="pt-5">
-                                    <a th:href="|/usr/challenge/detail/${challenge.id}|">
+                                <a th:href="|/usr/challenge/detail/${challenge.id}|">
+                                    <figure class="pt-5">
                                         <img src="/images/Challenge-img.png" alt="Shoes" class="rounded-xl w-[90%]" />
-                                    </a>
+                                    </figure>
+                                </a>
 
-                                </figure>
+
                                 <div class="card-body items-center text-center" style="padding: 10px">
                                     <a th:href="|/usr/challenge/detail/${challenge.id}|">
                                         <h4 class="text-black font-bold text-sm" th:text="${challenge.challengeName}">
