Feat: ChallengeTag(language, subject, posttype) add 챌린지 생성시 태그(언어, 주제, 인증방식) 추가

--- a/src/main/resources/templates/usr/challenge/create_form.html
+++ b/src/main/resources/templates/usr/challenge/create_form.html
@@ -86,7 +86,7 @@
                                         <span class="text-gray-400">챌린지 태그 설정</span>
                                     </label>
                                     <div></div>
-                                    <select name="tag" class="select select-accent w-70 max-w-xs">
+                                    <select name="language" class="select select-accent w-70 max-w-xs">
                                         <option disabled selected>공부하고 싶은 언어</option>
                                         <option>Java</option>
                                         <option>Go</option>
@@ -98,7 +98,7 @@
                                         <option>Python</option>
                                     </select>
 
-                                    <select name="tag" class="select select-accent w-70 max-w-xs">
+                                    <select name="subject" class="select select-accent w-70 max-w-xs">
                                         <option disabled selected>공부 주제</option>
                                         <option>개념 공부</option>
                                         <option>시험 대비</option>
@@ -106,7 +106,7 @@
                                         <option>프로젝트</option>
                                     </select>
 
-                                    <select name="tag" class="select select-accent w-70 max-w-xs">
+                                    <select name="posttype" class="select select-accent w-70 max-w-xs">
                                         <option disabled selected>인증 방식</option>
                                         <option>Github</option>
                                         <option>블로그</option>
